--- a/index.html
+++ b/index.html
@@ -8,30 +8,33 @@
 
 </head>
 <body>
-    <div class="col-md-6 mb-4">
-  <div class="d2c_card_wrapper"
-    style="background-color: #ffb5b5; border-radius: 15px; box-shadow: 0 5px 15px rgba(255,107,139,0.1); padding: 25px;">
-    <h5 class="mb-3 fw-bold text-dark">Kirim Ucapan 💌</h5>
-    <form id="form-ucapan">
-      <div class="mb-3">
-        <label for="name" class="form-label">Nama Kamu</label>
-        <input type="text" class="form-control" id="name" placeholder="Contoh: Rina - Sahabat SMP" required />
+    <body>
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6 mb-4">
+        <div class="d2c_card_wrapper"
+          style="background-color: #ffb5b5; border-radius: 15px; box-shadow: 0 5px 15px rgba(255,107,139,0.1); padding: 25px;">
+          <h5 class="mb-3 fw-bold text-dark text-center">Kirim Ucapan 💌</h5>
+          <form id="form-ucapan">
+            <div class="mb-3">
+              <label for="name" class="form-label">Nama Kamu</label>
+              <input type="text" class="form-control" id="name" placeholder="Contoh: Rina - Sahabat SMP" required />
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Pesan Ucapan</label>
+              <textarea class="form-control" id="message" rows="3" placeholder="Tulis ucapan manis kamu di sini..." required></textarea>
+            </div>
+            <button type="submit" class="btn btn-light border w-100"
+              style="background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+              Kirim Sekarang 💖
+            </button>
+            <div id="notif" class="mt-2 text-center"></div>
+          </form>
+        </div>
       </div>
-      <!-- <div class="mb-3">
-        <label for="subtitle" class="form-label">Hubungan (Opsional)</label>
-        <input type="text" class="form-control" id="subtitle" placeholder="Contoh: Bestie sejak kecil" />
-      </div> -->
-      <div class="mb-3">
-        <label for="message" class="form-label">Pesan Ucapan</label>
-        <textarea class="form-control" id="message" rows="3" placeholder="Tulis ucapan manis kamu di sini..." required></textarea>
-      </div>
-      <button type="submit" class="btn btn-light border w-100" style="background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-        Kirim Sekarang 💖
-      </button>
-      <div id="notif" class="mt-2 text-center"></div>
-    </form>
+    </div>
   </div>
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   const form = document.getElementById('form-ucapan');
