--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="col-md-6 mb-4">
         <div class="d2c_card_wrapper"
           style="background-color: #ffb5b5; border-radius: 15px; box-shadow: 0 5px 15px rgba(255,107,139,0.1); padding: 25px;">
-          <h5 class="mb-3 fw-bold text-dark text-center">Kirim Ucapan 💌</h5>
+          <h5 class="mb-3 fw-bold text-dark text-center">💌 Kirim Ucapan Ulang Tahun Ke Nada 💌</h5>
           <form id="form-ucapan">
             <div class="mb-3">
               <label for="name" class="form-label">Nama Kamu</label>
@@ -22,7 +22,7 @@
             </div>
             <div class="mb-3">
               <label for="message" class="form-label">Pesan Ucapan</label>
-              <textarea class="form-control" id="message" rows="3" placeholder="Tulis ucapan manis kamu di sini..." required></textarea>
+              <textarea class="form-control" id="message" rows="3" placeholder="Tulis ucapan ulang tahun kamu disini..." required></textarea>
             </div>
             <button type="submit" class="btn btn-light border w-100"
               style="background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
