--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <form id="form-ucapan">
             <div class="mb-3">
               <label for="name" class="form-label">Nama Kamu</label>
-              <input type="text" class="form-control" id="name" placeholder="Contoh: Rina - Sahabat SMP" required />
+              <input type="text" class="form-control" id="name" placeholder="Contoh: Nada" required />
             </div>
             <div class="mb-3">
               <label for="message" class="form-label">Pesan Ucapan</label>
