--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
               <input type="text" class="form-control" id="name" placeholder="Contoh: Razaan" required />
             </div>
             <div class="mb-3">
-              <label for="whatsapp" class="form-label">Nomor Whatsapp Untuk Reply Via Whatsapp</label>
-              <input type="text" id="whatsapp" placeholder="Contoh: +6281289215632 (opsional)" class="form-control">
-            </div>
+  <label for="whatsapp" class="form-label">
+    Nomor Whatsapp Untuk Reply Via Whatsapp 
+    <strong class="text-danger">Wajib Menggunakan +62</strong>
+  </label>
+  <input type="text" id="whatsapp" placeholder="Contoh: +6281289215632 (opsional)" class="form-control">
+</div>
             <div class="mb-3">
               <label for="message" class="form-label">Pesan Ucapan</label>
               <textarea class="form-control" id="message" rows="3" placeholder="Tulis ucapan ulang tahun kamu disini..." required></textarea>
@@ -110,9 +113,9 @@
             </button>
             <div id="notif" class="mt-2 text-center"></div>
             <p class="text-center" style="font-size: 0.85rem; color: #000000;">
-            <i class="fas fa-birthday-cake me-1"></i> 
+            <!-- <i class="fas fa-birthday-cake me-1"></i> 
             Nada akan berulang tahun di tanggal <strong>4 September</strong> Nanti
-            <i class="fas fa-birthday-cake ms-1"></i>
+            <i class="fas fa-birthday-cake ms-1"></i> -->
           </p>
           </form>
         </div>
