--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             <div class="mb-3">
   <label for="whatsapp" class="form-label">
     Nomor Whatsapp Untuk Reply Via Whatsapp 
-    <strong class="text-danger">Wajib Menggunakan +62</strong>
+    <strong class="text-danger">Wajib Menggunakan +62</strong><br>
+    (Kosongkan jika tidak ingin diisi)
   </label>
   <input type="text" id="whatsapp" placeholder="Contoh: +6281289215632 (opsional)" class="form-control">
 </div>
